# VitoChat

VitoChatBackend/: pyproject.toml
VitoChatFrontend/: index.html  package.json
VitoChatFrontend/src/: App.jsx  app.css
backend/VitoChatBackend/vitochatbackend/: main.py
